[FEAT] Updated bleesy logo file

--- a/admin-style.css
+++ b/admin-style.css
@@ -22,7 +22,7 @@
 }
 
 #wpadminbar #wp-admin-bar-wp-logo > .ab-item .ab-icon:before {
-  background-image: url("assets/img/blessy_logo.svg");
+  background-image: url("assets/img/blessy_logo_white.svg");
   background-repeat: no-repeat;
   top: 2px;
   background-size: 100px 40px;
