[FEAT] Hide templates menu item

--- a/admin-style.css
+++ b/admin-style.css
@@ -9,7 +9,8 @@
 #adminmenuwrap,
 #adminmenu,
 #adminmenu .wp-submenu,
-#wpadminbar {
+#wpadminbar,
+#adminmenuback {
   background-color: #296d7c;
 }
 
